distributed-backend/orchestration/kubernetes/observability/honeycomb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eve-trade-observability
  labels:
    name: eve-trade-observability
