distributed-backend/orchestration/kubernetes/observability/honeycomb/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-eve-trade-apps-to-otel-cluster
  namespace: eve-trade
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: eve-trade-observability
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: eve-trade-otel-cluster
      ports:
        - protocol: TCP
          port: 4318
        - protocol: TCP
          port: 4317

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-egress-to-honeycomb
  namespace: eve-trade-observability
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
